front-end/chatpage ended, pixel font deleted due to it's size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script defer src="scripts/main.js"></script>
         <title>Hacker Room - Chat With Special People!</title>
     </head>
-    <body>
+    <body class="login">
         <form method="POST">
             <table>
                 <tr>
