--- a/pages/chat.html
+++ b/pages/chat.html
@@ -11,8 +11,13 @@
     </head>
     <body class="chat">
         <div class="container">
+            <div class="nav-row" style="display: flex;">
+                <div class="welcome">Brothers & Sisters... welcome here!</div>
+                <a href="pages/logout.php" class="btn logout">Logout</a>
+                <h2 class="online-users-header">ONLINE USERS:</h2>
+            </div>
             <div class="interface-row">
-                <div class="messages-container-col hidden-scrollbar" id="messages">
+                <div class="messages-container-col hidden-scrollbar" id="messages-section">
                     <div class="message-row">
                         <div class="sender-info">NAME &lt;NICK&gt;: </div>
                         <div class="message">message goes here.</div>
@@ -20,18 +25,34 @@
                     <div class="message-row mine">
                         <div class="message">this is my message</div>
                     </div>
-                    <div class="welcome-message">USER HAS JOIN THE ROOM.</div>
+                    <div class="server-message">USER HAS JOIN THE ROOM.</div>
                 </div>
-                <div class="online-users-col hidden-scrollbar">
-                    <h2 class="online-users-header">ONLINE USERS:</h2>
-                    <div class="online-users-container">
+                <div class="online-users-col hidden-scrollbar" id="online-users-section">
                         <div class="online-user">USER NAME</div>
-                    </div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
+                        <div class="online-user">USER NAME</div>
                 </div>
             </div>
             <form  class="form-row">
                 <input name="message" placeholder="Message them..." class="message-input">
-                <button class="send-btn">Send</button>
+                <button class="btn">Send</button>
             </form>
         </div>
     </body>
