chat page is responsive now.

--- a/pages/chat.html
+++ b/pages/chat.html
@@ -29,30 +29,11 @@
                 </div>
                 <div class="online-users-col hidden-scrollbar" id="online-users-section">
                         <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
-                        <div class="online-user">USER NAME</div>
                 </div>
             </div>
             <form  class="form-row">
-                <input name="message" placeholder="Message them..." class="message-input">
-                <button class="btn">Send</button>
+                <input name="message" autocomplete="off" placeholder="Message them..." class="message-input">
+                <button class="btn" style="border-left: 1px solid var(--light-green);">Send</button>
             </form>
         </div>
     </body>
